# labsLinuxOS

./: CMakeLists.txt  lab.cpp  main.cpp  output.txt  run_dynamically.cpp  run_statically.cpp  test.cpp  text2.txt
longest_sentence_lib/: lab.cpp
longest_sentence_lib/include/my_library/: lab.h
